--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,14 @@
 <resources>
     <string name="app_name">CapstoneApp</string>
     <string name="action_settings">Settings</string>
-    <!-- Strings used for fragments for navigation -->
-    <string name="first_fragment_label">First Screen</string>
+    <string name="first_fragment_label">SignIt</string>
     <string name="second_fragment_label">Second Screen</string>
     <string name="next">Next</string>
     <string name="previous">Previous</string>
     <string name="titleFirstScreen">Take a Picture </string>
     <string name="command1">Please take a picture using the button</string>
+    <string name="username">Username</string>
+    <string name="password">Password</string>
+    <string name="sign_in">Sign In</string>
+    <string name="background_image_description">Background image description</string>
 </resources>
