--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="hello">Hello</string>
     <string name="logout">Log Out</string>
     <string name="log_out">Log Out</string>
+    <string name="sign_up">Sign Up</string>
 </resources>
