--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,8 +2,8 @@
     <string name="app_name">CapstoneApp</string>
     <string name="action_settings">Settings</string>
     <!-- Strings used for fragments for navigation -->
-    <string name="first_fragment_label">First Screen</string>
-    <string name="second_fragment_label">Second Screen</string>
+    <string name="first_fragment_label">Sign It</string>
+    <string name="second_fragment_label">Sign It</string>
     <string name="next">Next</string>
     <string name="previous">Previous</string>
     <string name="titleFirstScreen">Take a Picture </string>
